2014-11-19  Per Bothner  <per@bothner.com>

	* build.xml (kawa.sh): Build bin/kawa.sh from bin/kawa.sh.in.

2014-11-18  Per Bothner  <per@bothner.com>

	* configure.ac (AC_CONFIG_FILES): Add bin/kawa.sh.
	* Makefile.am (bin/kawa.sh): Remove rule.  Now generated by configure.
	(EXTRA_DST): Add bin/kawa.sh.in.

2014-11-17  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (lib-scm-classes): Add quaternions.scm.

2014-10-28  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm-classes): Add remaining R7RS standard libraries.

2014-10-14  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.90.
	* build.xml (version.release): Likewise.

2014-09-28  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm-classes): Add new R7RS standard libraries.

2014-09-26  Per Bothner  <per@bothner.com>

	* build.xml: 'define-record-type' was moved from gnu.kawa.slib
	to kawa.lib.

2014-08-31  Per Bothner  <per@bothner.com>

	* Makefile.am: Each Makefile from gnu/expr, gnu/mapping, gnu/lists
	and gnu/text were merged into gnu/Makefile.
	* configure.ac: Likewise.

2014-08-28  Per Bothner  <per@bothner.com>

	* Makefile.am: Remove Makefiles from intermediate directories
	gnu/commonlisp gnu/xquery/gnu/q2.
	Fold Makefile in gnu/kawa/xslt into gnu directory.
	* configure.ac: Update accordingly.

2014-08-21  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm-classes): Add parameterize.scm.
	* classes-to-skip-for-runtime: Add some more classes.

	* build.xml (android-classes): Add utils.scm.

2014-08-20  Per Bothner  <per@bothner.com>

	* build.xml: Fix support for enable.android, by adding android.path
	to the build.path.
	* build.properties (android.path): Set defaul value.

	* build.xml (lib-scm-classes): Add case_syntax.scm.

2014-08-04  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm-classes): Add compile_map.scm.

2014-07-22  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm-classes): Add string-cursors.scm.
